--- a/src/components/revolutionalizeSection/revo.styles.css
+++ b/src/components/revolutionalizeSection/revo.styles.css
@@ -143,7 +143,7 @@
   background-size: cover;
   position: absolute;
   left: 0;
-  top: -3.5rem;
+  top: -2.5rem;
   opacity: 0;
 }
 
